--- a/.github/workflows/deploy-ec2.yml
+++ b/.github/workflows/deploy-ec2.yml
@@ -17,7 +17,7 @@ jobs:
           node-version: "15"
   cd:
     runs-on: ubuntu-latest
-    needs: [continuous-integration]
+    needs: [ci]
     if: github.ref == 'refs/heads/main'
     steps:
       - name: Configure AWS credentials
